--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server/server.js",
+    "dev": "nodemon ./src/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/FACK1/POST#readme",
   "dependencies": {
+    "env2": "^2.2.2",
+    "pg": "^7.7.1"
+  },
+  "devDependencies": {
     "nodemon": "^1.18.8"
   }
 }
