--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server/server.js"
+    "test": "tape ./src/test/test.js | tap-spec ",
+    "dev": "nodemon ./src/server/server.js",
+    "lint": "./node_modules/.bin/eslint ./src/server/**/*.js",
+    "lint-fix": "./node_modules/.bin/eslint --fix ./src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -19,9 +21,16 @@
   "homepage": "https://github.com/FACK1/POST#readme",
   "dependencies": {
     "env2": "^2.2.2",
-    "pg": "^7.7.1"
+    "pg": "^7.7.1",
+    "supertest": "^3.3.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.8"
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "nodemon": "^1.18.8",
+    "tape": "^4.9.1"
   }
 }
