--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/FACK1/POST#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "data-store": "^3.1.0",
     "env2": "^2.2.2",
     "pg": "^7.7.1"
   },
