--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "homepage": "https://github.com/FACK1/POST#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "data-store": "^3.1.0",
+    "cookie": "^0.3.1",
     "env2": "^2.2.2",
+    "jsonwebtoken": "^8.4.0",
     "pg": "^7.7.1"
   },
   "devDependencies": {
