--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "nodemon": "^1.18.8",
+    "tap-spec": "^5.0.0",
     "tape": "^4.9.1"
   }
 }
